@@ -1969,8 +1969,8 @@ class ConfiguratorTests(unittest.TestCase):
         from repoze.bfg.interfaces import IViewClassifier
         config = self._makeOne()
         config.add_static_view('static', 'fixtures/static')
-        request_type = self._getRouteRequestIface(config, 'static')
-        route = self._assertRoute(config, 'static', 'static/*subpath')
+        request_type = self._getRouteRequestIface(config, 'static/')
+        route = self._assertRoute(config, 'static/', 'static/*subpath')
         self.assertEqual(route.factory.__class__, type(lambda x: x))
         iface = implementedBy(StaticURLInfo)
         wrapped = config.registry.adapters.lookup(
